Fix right margin & horizontal scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -1,17 +1,12 @@
 html,body {
-  width: 100%;
-  height: 100%;
+  min-height: 100dvh;
+  min-width: 100dvw;
+  overflow-x: hidden;
   margin: 0px;
-  padding: 0px;
-}
-
-body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   font-family: Roboto, sans-serif;
-  min-height: 100dvh;
-  min-width: 100%;
 }
 
 a {
